--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
 
-Kidus Worku <kidusmik@gmail.com>
+Daniel yadeta <danieltesfaye1986@gmail.com>
